--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.elasticsearch.rest.uris=http://localhost:9300
 spring.elasticsearch.rest.username=elastic
 spring.elasticsearch.rest.password=changeme
 
-spring.datasource.url=jdbc:snowflake://to52073.east-us-2.azure.snowflakecomputing.com
-spring.datasource.driver-class-name=net.snowflake.Driver
 
-app.user=pranayvikram
+app.driverClassName=net.snowflake.client.jdbc.SnowflakeDriver
+app.datasourceUrl=jdbc:snowflake://to52073.east-us-2.azure.snowflakecomputing.com
+app.username=pranayvikram
 app.password=changeit
 app.db=SALES_DB
 app.schema=DEV1
