updated rest high level client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ spring.elasticsearch.rest.password=changeme
 app.driverClassName=net.snowflake.client.jdbc.SnowflakeDriver
 app.datasourceUrl=jdbc:snowflake://to52073.east-us-2.azure.snowflakecomputing.com
 app.username=pranayvikram
-app.password=changeit
-app.db=SALES_DB
-app.schema=DEV1
+app.password=changeme
 app.warehouse=TEST_WH
 app.role=sysadmin
+app.db=SALES_DB
+app.schema=DEV1
+
 
 elasticsearch.host=localhost
 elasticsearch.port=9200
-
+elasticsearch.timeout=2000
+elasticsearch.scheme=http
